Switch to JUnit5 (supporting 4) & setup publishing